Fix wrap guide
Fixes #2

--- a/styles/base.less
+++ b/styles/base.less
@@ -20,7 +20,7 @@ atom-text-editor .gutter .line-number.cursor-line-no-selection, :host .gutter .l
   color: @syntax-gutter-text-color-selected;
 }
 
-atom-text-editor .wrap-guide, :host .wrap-guide {
+atom-text-editor::shadow .wrap-guide, :host .wrap-guide {
   // color: @syntax-wrap-guide-color;
   background-color: transparent;
   border-left: 1px dashed @syntax-wrap-guide-color;
